<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/corners"
            android:fontFamily="@font/cantarell"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/length"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners"
                android:fontFamily="@font/cantarell"
                android:text="@string/length"
                android:textColor="@color/colorTextBlack" />

            <Button
                android:id="@+id/weight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners"
                android:fontFamily="@font/cantarell"
                android:text="@string/weight"
                android:textColor="@color/colorTextBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/area"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners"
                android:fontFamily="@font/cantarell"
                android:text="@string/area"
                android:textColor="@color/colorTextBlack" />

            <Button
                android:id="@+id/volume"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners"
                android:fontFamily="@font/cantarell"
                android:text="@string/volume"
                android:textColor="@color/colorTextBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/speed"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners"
                android:fontFamily="@font/cantarell"
                android:text="@string/speed"
                android:textColor="@color/colorTextBlack" />

            <Button
                android:id="@+id/temperature"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners"
                android:fontFamily="@font/cantarell"
                android:text="@string/temp"
                android:textColor="@color/colorTextBlack" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/alegreya_sc"
            android:gravity="center_horizontal"
            android:text="@string/owner"
            android:textColor="@color/colorTextBlack"
            android:textSize="25sp" />

    </LinearLayout>


</LinearLayout>